# KIV-PSI-task03

./: CMakeLists.txt  Dockerfile  README.md
include/: config.h  iss.h  restapiclient.h  utils.h
src/: iss.cpp  main.cpp  restapiclient.cpp  utils.cpp
